# mytuner

./: CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  Neue Parameter {'RevFut' 120.0, 'Re.txt  [1221s] Epoch 4750 (6.3893 eps), er.txt  base.h  config.h  main.cpp  tuner.cpp
src/engines/: Evaluation_data.h  Move.h  SPSA_parameters.h  TuneEval.cpp  TuneEval.h  adjustable_parameters.h  attack_rays.h  bishop_tables.h  bitboard_masks.h  board.cpp  board.h  constants.h  eval_params.h  evaluation.cpp  evaluation.h  notation_utils.h  pst.h  rook_tables.h  see.h  utils.h  weights.cpp  zobrist.cpp  zobrist.h
